--- a/README
+++ b/README
@@ -1,16 +1,20 @@
 WebService-Sprint
 
-The README is used to introduce the module and provide instructions on
-how to install the module, any machine dependencies it may have (for
-example C compilers and installed libraries) and any other information
-that should be provided before the module is installed.
+Implements some features of Sprint's developer web services. For more information, see:
+http://developer.sprint.com/site/global/sandbox/home.jsp
+http://developer.sprint.com/site/global/sandbox/sprint_services/sprint_services.jsp
 
-A README file is required for CPAN modules since CPAN extracts the README
-file from a module distribution so that people browsing the archive
-can use it to get an idea of the module's uses. It is usually a good idea
-to provide version information here so that people can decide whether
-fixes for the module are worth downloading.
+Currently supports:
+- presence
+- location (3G)
+- Geofence perimiter check
+- User management -- retrieving list of devices
 
+Does not support:
+- All other geofence operations
+- SMS
+- User management -- adding or removing devices
+- iDen Content Uploader
 
 INSTALLATION
 
