Fixed dependencies in Build.PL; updated changelog

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for WebService-Sprint
 
+0.02	2012/01/02
+	Minor documentation changes, adding module dependencies
+
 0.01    Date/time
         First version, released on an unsuspecting world.
 
